# mori

./: .env  .gitignore  README.md  Readme.md  different_users.txt  go.mod  go.sum  main.go  package-lock.json  pyproject.toml
.github/: auto_assign.yml
.github/workflows/: auto_assign.yml  mori-workflow.yml
app/: server.go
backend/: .env  config.go  go.mod  go.sum  home.go  login.go  login_test.go  main.go  register.go  reset_password.go  server.go  tempDB.db  verifyCSRFtoken.go  verifyEmail.go
backend/app/: server.go
backend/captcha/: captcha.go
backend/database/: db.go
backend/home/: home.go
backend/logic_llm/: llm_manager.py  server.py  test_server.py  test_token.py
backend/loginBack/: deleteNonVerified.go  login.go  login_test.go  profile_management.go  register.go  reset_password.go  verifyCSRFtoken.go  verifyEmail.go
backend/middleware/: functions_token.go
backend/router/: config.go
captcha/: captcha.go
database/: db.go
frontend/: package-lock.json  package.json  vue.config.js
frontend/chatbot/: chat_window.js  chatbot.css  chatbot.html  chatbot.js  logic_chat.js  toggle_sidebar.js
frontend/email_validation/: email_validation.html
frontend/login/: login.css  login.html  login.js
frontend/reset_password/: reset_password_form.css  reset_password_form.html  reset_password_form.js
frontend/src/: App.vue
frontendAncien/chatbot/: chat_window.js  chatbot.html  logic_chat.js
frontendAncien/email_validation/: email_validation.css
frontendAncien/login/: login.html  (+1 more)
interface_contract/: front-python.md
logic_llm/: server.py
(+85 files in other folders)
